--- a/src/app/components/app-main-section/components/news-page-section/news-page-section.component.scss
+++ b/src/app/components/app-main-section/components/news-page-section/news-page-section.component.scss
@@ -4,7 +4,7 @@
 @import '../../../../../assets/modules/generic-content-container';
 
 .section-title {
-  color: $mainRoseAsh;
+  color: grey;
 }
 
 .news-section {
