--- a/src/app/components/app-main-section/components/main-page-section/app-main-page-section.component.scss
+++ b/src/app/components/app-main-section/components/main-page-section/app-main-page-section.component.scss
@@ -27,6 +27,11 @@
     height: 800px;
     object-fit: cover;
     opacity: 40%;
+    display: none;
+
+  }
+
+  img.active {
     display: block;
   }
 
