--- a/src/app/components/app-main-section/components/about-us-page-section/about-us-page-section.component.scss
+++ b/src/app/components/app-main-section/components/about-us-page-section/about-us-page-section.component.scss
@@ -2,24 +2,83 @@
 @import '../../../../../assets/modules/section-title';
 
 
-.about-us_heading {
-  color: $mainRoseAsh;
+.about-us {
+  border-bottom: 10px solid $mainRoseAsh;
 }
 
-.about-us_main {
+.about-us_section {
+  text-align: center;
+  padding: 0 60px 40px;
+  border-bottom: 10px solid $mainRoseAsh;
+
+  @include atMedium{}
+  border-bottom: none;
+}
+
+.about-us_heading {
+  color: grey;
+}
+
+.about-us_trainers-heading {
+  color: grey;
+  font-size: 30px;
+  font-weight: 500;
+}
+
+.about-us_container {
   display: flex;
-  align-items: flex-start;
-  margin: 3.125rem 18.75rem;
+  flex-wrap: wrap;
+  flex-direction: column;
+  justify-content: center;
+  gap: 50px;
+}
+
+.about-us_card {
+  display: flex;
+  flex-direction: column;
+  background: rgba(255, 255, 255, 0.3);
+  border-radius: 10px;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  color: grey;
+  overflow: hidden;
+  transition: transform 0.3s;
+
+
+  &:hover {
+    transform: scale(1.05);
+  }
+
+  &__heading {
+    font-size: 25px;
+    margin: 0;
+  }
+
+  &__age {
+    margin-top: 5px;
+  }
+
+  &__description {
+  }
+
+  @include atMedium {
+    width: 60%;
+    height: 500px;
+    text-align: left;
+    margin-left: auto;
+    margin-right: auto;
+    flex-direction: row;
+  }
 }
 
 .about-us_image {
-  width: 18.75rem;
-  height: 18.75rem;
-  max-width: 40%;
+
+  object-fit: cover;
+
+  @include atMedium{
+    width: 30%;
+  }
 }
 
-.about-us_main_description {
-  padding: 0 12.5rem;
-  width: 40%;
-  margin: 0;
+.about-us_description {
+  padding: 15px;
 }
