adjust faq section and faq answer transition interval

--- a/src/app/components/app-main-section/components/main-page-section/app-main-page-section.component.html
+++ b/src/app/components/app-main-section/components/main-page-section/app-main-page-section.component.html
@@ -28,10 +28,10 @@
       </div>
     </div>
   </div>
-  <h2 class="section-title gma-heading">You can easily find us and start your training today!</h2>
+  <h2 class="section-title gma-heading">{{ 'MAIN.HOME.GM_HEADING' | translate }}</h2>
   <app-google-map></app-google-map>
   <div class="quote-container">
-    <p class="quote-text">“Physical fitness is the first requisite of happiness.”</p>
-    <p class="quote-author">— Joseph Pilates</p>
+    <p class="quote-text">“{{ 'MAIN.HOME.PILATES_QUOTE' | translate }}”</p>
+    <p class="quote-author">— {{ 'MAIN.HOME.JOSEPH_PILATES' | translate }}</p>
   </div>
 </div>
