--- a/src/app/components/app-main-section/components/prices-page-section/prices-page-section.component.html
+++ b/src/app/components/app-main-section/components/prices-page-section/prices-page-section.component.html
@@ -44,6 +44,7 @@
         <div class="terms">{{ 'MAIN.PRICES.TABLE.TWO_MONTHS' | translate }}</div>
       </div>
     </div>
+    <a routerLink="/reservations" class="btn btn_prices">Make a reservation</a>
   </div>
   <div class="price-list-section">
     <h2 class="section-title">{{ 'MAIN.PRICES.INDIVIDUAL_TRAININGS' | translate }}</h2>
@@ -88,5 +89,6 @@
         <div class="terms">{{ 'MAIN.PRICES.TABLE.TWO_MONTHS' | translate }}</div>
       </div>
     </div>
+    <a routerLink="/reservations" class="btn btn_prices">Make a reservation</a>
   </div>
 </section>
