add text for about-us in footer and adjust styling

--- a/src/app/components/app-footer/app-footer.component.html
+++ b/src/app/components/app-footer/app-footer.component.html
@@ -1,25 +1,35 @@
 <div class="footer">
   <div class="about-us_container">
     <h4 class="about-us_container__heading">{{ 'MAIN.FOOTER.ABOUT_US' | translate }}</h4>
-    <p class="about-us_container__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci atque error
-      magnam mollitia tempora, tempore, atque error
-      magnam mollitia tempora, tempore</p>
+    <p class="about-us_container__description">{{ 'MAIN.FOOTER.ABOUT_US_DESCRIPTION' | translate }}</p>
   </div>
   <div class="social-media_container">
     <h4 class="social-media_container__heading">{{ 'MAIN.FOOTER.SOCIAL_MEDIA.HEADER' | translate }}</h4>
     <ul class="social-media_container__list">
-      <li><a href="https://www.instagram.com/reformflowstudio/"><ng-icon class="ng_icons" name="bootstrapInstagram"></ng-icon>Instagram</a></li>
-      <li><a href="https://www.facebook.com/share/1BuCzMbYMY/?mibextid=wwXIfr"><ng-icon class="ng_icons" name="bootstrapFacebook"></ng-icon>Facebook</a></li>
-      <li><a href="https://www.tiktok.com/@reformflowstudio?_t=ZN-8vEIY3lqNgU&_r=1"><ng-icon class="ng_icons" name="bootstrapTiktok"></ng-icon>TikTok</a></li>
+      <li><a href="https://www.instagram.com/reformflowstudio/">
+        <ng-icon class="ng_icons" name="bootstrapInstagram"></ng-icon>
+        Instagram</a></li>
+      <li><a href="https://www.facebook.com/share/1BuCzMbYMY/?mibextid=wwXIfr">
+        <ng-icon class="ng_icons" name="bootstrapFacebook"></ng-icon>
+        Facebook</a></li>
+      <li><a href="https://www.tiktok.com/@reformflowstudio?_t=ZN-8vEIY3lqNgU&_r=1">
+        <ng-icon class="ng_icons" name="bootstrapTiktok"></ng-icon>
+        TikTok</a></li>
     </ul>
   </div>
   <div class="contacts_container">
     <h4 class="contacts_container__heading">{{ 'MAIN.FOOTER.CONTACTS.HEADER' | translate }}</h4>
     <ul class="contacts_container__list">
-      <li><a type="phone" href="tel:+1234567890"><ng-icon class="ng_icons" name="bootstrapTelephoneFill"></ng-icon>+359 88888888</a></li>
-      <li><a type="mail" href="mailto:lyubomir_vasilev1992@abv.bg"><ng-icon class="ng_icons" name="bootstrapEnvelopeOpenFill"></ng-icon>{{ 'ven@abv.bg' }}</a></li>
+      <li><a type="phone" href="tel:+1234567890">
+        <ng-icon class="ng_icons" name="bootstrapTelephoneFill"></ng-icon>
+        +359 88888888</a></li>
+      <li><a type="mail" href="mailto:lyubomir_vasilev1992@abv.bg">
+        <ng-icon class="ng_icons" name="bootstrapEnvelopeOpenFill"></ng-icon>
+        {{ 'ven@abv.bg' }}</a></li>
       <li><a
-        href="https://g.co/kgs/Rp5DPvw"><ng-icon class="ng_icons" name="bootstrapPinMapFill"></ng-icon>{{ 'MAIN.FOOTER.CONTACTS.CONTACTS_LIST.LOCATION' | translate }}</a></li>
+        href="https://g.co/kgs/Rp5DPvw">
+        <ng-icon class="ng_icons" name="bootstrapPinMapFill"></ng-icon>
+        {{ 'MAIN.FOOTER.CONTACTS.CONTACTS_LIST.LOCATION' | translate }}</a></li>
     </ul>
   </div>
 </div>
