--- a/src/app/components/app-footer/app-footer.component.scss
+++ b/src/app/components/app-footer/app-footer.component.scss
@@ -49,7 +49,7 @@
   }
 
   &__description {
-    padding: 0 100px;
+    padding: 0 10px;
 
     @include atMedium {
       padding: 0;
@@ -93,6 +93,9 @@
 
 
 .contacts_container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
   &__heading {
     text-align: center;
