adjustments for home prices and contacts sections

--- a/src/app/components/app-main-section/components/main-page-section/app-main-page-section.component.html
+++ b/src/app/components/app-main-section/components/main-page-section/app-main-page-section.component.html
@@ -13,6 +13,7 @@
     <div class="middle-hero__text-content">
       <h1 class="middle-hero__title">{{ 'MAIN.HOME.MIDDLE_HEADING' | translate }}</h1>
       <p class="middle-hero__paragraph">{{ 'MAIN.HOME.MIDDLE_PARAGRAPH' | translate }}</p>
+      <a routerLink="/about-us" class="btn btn_about-us">Meet the instructors</a>
       <img class="middle-hero__img" src="./assets/images/home/IMG_0001.jpeg" alt="main-section stretch image">
     </div>
   </div>
