--- a/src/app/components/app-main-section/components/prices-page-section/prices-page-section.component.html
+++ b/src/app/components/app-main-section/components/prices-page-section/prices-page-section.component.html
@@ -23,23 +23,23 @@
       </div>
 
       <div class="price-item">
-        <div class="service">8 {{ 'MAIN.PRICES.TABLE.CLASSES' | translate }}</div>
+        <div class="service">8 {{ 'MAIN.PRICES.TABLE.TRAININGS' | translate }}</div>
         <div class="price">200 BGN</div>
         <div class="terms">{{ 'MAIN.PRICES.TABLE.PER_MONTH' | translate }}</div>
       </div>
 
       <div class="price-item">
-        <div class="service">12 {{ 'MAIN.PRICES.TABLE.CLASSES' | translate }}</div>
+        <div class="service">12 {{ 'MAIN.PRICES.TABLE.TRAININGS' | translate }}</div>
         <div class="price">270 BGN</div>
         <div class="terms">{{ 'MAIN.PRICES.TABLE.PER_MONTH' | translate }}</div>
       </div>
       <div class="price-item">
-        <div class="service">12 {{ 'MAIN.PRICES.TABLE.CLASSES' | translate }}</div>
+        <div class="service">12 {{ 'MAIN.PRICES.TABLE.TRAININGS' | translate }}</div>
         <div class="price">300 BGN</div>
         <div class="terms">{{ 'MAIN.PRICES.TABLE.TWO_MONTHS' | translate }}</div>
       </div>
       <div class="price-item">
-        <div class="service">12 {{ 'MAIN.PRICES.TABLE.CLASSES' | translate }}</div>
+        <div class="service">18 {{ 'MAIN.PRICES.TABLE.TRAININGS' | translate }}</div>
         <div class="price">400 BGN</div>
         <div class="terms">{{ 'MAIN.PRICES.TABLE.TWO_MONTHS' | translate }}</div>
       </div>
@@ -68,23 +68,23 @@
       </div>
 
       <div class="price-item">
-        <div class="service">8 {{ 'MAIN.PRICES.TABLE.CLASSES' | translate }}</div>
+        <div class="service">8 {{ 'MAIN.PRICES.TABLE.TRAININGS' | translate }}</div>
         <div class="price">320 BGN</div>
         <div class="terms">{{ 'MAIN.PRICES.TABLE.PER_MONTH' | translate }}</div>
       </div>
 
       <div class="price-item">
-        <div class="service">12 {{ 'MAIN.PRICES.TABLE.CLASSES' | translate }}</div>
+        <div class="service">12 {{ 'MAIN.PRICES.TABLE.TRAININGS' | translate }}</div>
         <div class="price">420 BGN</div>
         <div class="terms">{{ 'MAIN.PRICES.TABLE.PER_MONTH' | translate }}</div>
       </div>
       <div class="price-item">
-        <div class="service">12 {{ 'MAIN.PRICES.TABLE.CLASSES' | translate }}</div>
+        <div class="service">12 {{ 'MAIN.PRICES.TABLE.TRAININGS' | translate }}</div>
         <div class="price">500 BGN</div>
         <div class="terms">{{ 'MAIN.PRICES.TABLE.TWO_MONTHS' | translate }}</div>
       </div>
       <div class="price-item">
-        <div class="service">12 {{ 'MAIN.PRICES.TABLE.CLASSES' | translate }}</div>
+        <div class="service">18 {{ 'MAIN.PRICES.TABLE.TRAININGS' | translate }}</div>
         <div class="price">620 BGN</div>
         <div class="terms">{{ 'MAIN.PRICES.TABLE.TWO_MONTHS' | translate }}</div>
       </div>
