--- a/src/app/components/app-header/app-header.component.scss
+++ b/src/app/components/app-header/app-header.component.scss
@@ -113,6 +113,10 @@
         text-decoration: none;
         font-size: 23px;
         text-shadow: 2px 2px 5px rgba(225, 134, 134, 0.5);
+
+        @include atMedium{
+          font-size: 18px;
+        }
       }
 
       .contacts_link_mobile {
