--- a/src/app/components/app-main-section/components/reservations-page-section/reservations-page-section.component.scss
+++ b/src/app/components/app-main-section/components/reservations-page-section/reservations-page-section.component.scss
@@ -14,7 +14,7 @@ h2 {
 
 .form-container {
   max-width: 700px;
-  margin: 0 auto;
+  margin: 0 auto 100px;
   padding: 20px;
   display: flex;
   flex-direction: column;
