removed completly standalone usage + fixed router-outlet logic and calls

--- a/src/app/components/app-header/app-header.component.html
+++ b/src/app/components/app-header/app-header.component.html
@@ -10,7 +10,7 @@
   </label>
   <nav class="header_nav" [class.active]="menuOpen">
     <ul class="nav_list">
-      <li><a routerLink="" routerLinkActive="active-link"
+      <li><a routerLink="/" routerLinkActive="active-link"
              (click)="closeMenu()">{{ 'MAIN.HEADER.NAV.HOME' | translate }}</a></li>
       <li><a routerLink="/news" (click)="closeMenu()">{{ 'MAIN.HEADER.NAV.NEWS' | translate }}</a></li>
       <li><a routerLink="/prices" (click)="closeMenu()">{{ 'MAIN.HEADER.NAV.PRICES' | translate }}</a></li>
