--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-header></app-header>
-<app-main-section>
-</app-main-section>
+<main>
+  <router-outlet></router-outlet>
+</main>
 <app-footer></app-footer>
