--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,7 @@
 @import '../assets/modules/load-spinner';
+@import '../assets/base/global';
+@import '../assets/modules/section-title';
+@import '../assets/modules/generic-content-container';
 
 main {
   margin-top: 100px;
