--- a/src/app/components/app-footer/app-footer.component.scss
+++ b/src/app/components/app-footer/app-footer.component.scss
@@ -1,26 +1,30 @@
 @import '../../../assets/base/global';
 
-
 .footer {
-  display: flex;
-  justify-content: space-evenly;
   background: $mainRoseAsh;
+}
+
+.footer_section {
+  display: flex;
+  justify-content: space-between;
+  flex-grow: 1;
+  flex-shrink: 1;
+  flex-direction: column;
+  align-items: flex-start;
   color: ivory;
   font-size: 1.125rem;
-  padding: 1.5rem 0 3.125rem;
-  flex-direction: column;
-  align-items: center;
+  padding: 0 10%;
+
 
   .ng_icons {
-    width: 1.75rem;
-    height: 1.75rem;
+    width: 2rem;
+    height: 2rem;
     list-style: none;
     margin-right: 0.3125rem;
   }
 
   @include atMedium {
     flex-direction: row;
-    align-items: flex-start;
   }
 
   h4 {
@@ -39,7 +43,8 @@
 }
 
 .about-us_container {
-  text-align: center;
+  text-align: left;
+  margin-top: 25px;
 
   &__heading {
 
@@ -49,7 +54,6 @@
   }
 
   &__description {
-    padding: 0 10px;
 
     @include atMedium {
       padding: 0;
@@ -57,11 +61,15 @@
   }
 
   @include atMedium {
-    width: 25%;
+    width: 20%;
   }
 }
 
 .social-media_container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin-top: 25px;
 
   &__heading {
 
@@ -81,7 +89,6 @@
       display: flex;
       align-items: center;
       text-decoration: none;
-      margin-left: 0.3125rem;
     }
   }
 
@@ -89,31 +96,33 @@
     padding-left: 0;
     margin-top: 0;
   }
+
+  @include atMedium {
+    width: 20%;
+  }
 }
 
 
 .contacts_container {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
+  margin-top: 25px;
 
   &__heading {
 
     @include atLarge {
-      text-align: left;
       margin-top: 0;
     }
   }
 
   &__list {
     list-style: none;
-    padding: 0;
     margin-top: 0;
-
+    padding: 0;
 
     li {
-      list-style: none;
-      margin-bottom: 1.25rem;
+      margin-bottom: 0.9375rem;
 
       a {
         text-decoration: none;
@@ -121,10 +130,42 @@
         align-items: center;
         white-space: pre-line;
       }
-
-      i {
-        margin-right: 10px;
-      }
     }
+  }
+
+  @include atMedium {
+    width: 20%;
+    text-align: left;
+  }
+}
+
+.further-options_container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 25px;
+
+  .further-options_container__heading {
+    margin-top: 0;
+  }
+
+  .further-options_container__list {
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    margin: 0;
+    padding: 0;
+
+    li {
+      margin-bottom: 0.9375rem;
+    }
+
+    a {
+      text-decoration: none;
+    }
+  }
+
+  @include atMedium {
+    width: 20%;
   }
 }
