changed order in fag section and updated questions in faq

--- a/src/app/components/app-main-section/components/main-page-section/app-main-page-section.component.scss
+++ b/src/app/components/app-main-section/components/main-page-section/app-main-page-section.component.scss
@@ -282,10 +282,16 @@
   opacity: 1;
 }
 
+.answer-container.open:last-child {
+  max-height: 450px;
+  opacity: 1;
+}
+
 /* Styling for the answer text */
 .answer {
   padding: 10px;
   color: #333;
+  font-size: 1.25rem;
 }
 
 .gma-heading {
