adjust size ot text in header prices for small devices

--- a/src/app/components/app-main-section/components/prices-page-section/prices-page-section.component.scss
+++ b/src/app/components/app-main-section/components/prices-page-section/prices-page-section.component.scss
@@ -91,8 +91,12 @@
     .service,
     .price,
     .terms {
-      font-size: 24px;
+      font-size: 20px;
       color: grey;
+
+      @include atMedium() {
+        font-size: 24px;
+      }
     }
   }
 
