adjust form name fields for small devices

--- a/src/app/components/app-main-section/components/reservations-page-section/reservations-page-section.component.scss
+++ b/src/app/components/app-main-section/components/reservations-page-section/reservations-page-section.component.scss
@@ -23,8 +23,16 @@ h2 {
 }
 
 .name-fields {
-  display: flex;
-  gap: 10px;
+  display: block;
+
+  label:nth-child(1) {
+    margin-top: 10px;
+  }
+
+  @include atMedium {
+    display: flex;
+    gap: 10px;
+  }
 }
 
 .input-group {
