--- a/src/app/components/app-main-section/components/reservations-page-section/reservations-page-section.component.scss
+++ b/src/app/components/app-main-section/components/reservations-page-section/reservations-page-section.component.scss
@@ -60,14 +60,20 @@ input {
 
 .radio-group {
   display: flex;
+  flex-direction: column;
   gap: 1rem;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
 
   label {
     display: flex;
     align-items: center;
     gap: 0.5rem;
+  }
+
+  @include atMedium {
+    flex-direction: row;
+    align-items: center;
   }
 }
 
