--- a/src/app/components/app-footer/app-footer.component.html
+++ b/src/app/components/app-footer/app-footer.component.html
@@ -34,11 +34,11 @@
       </ul>
     </div>
     <div class="further-options_container">
-      <h4 class="further-options_container__heading">Further Options</h4>
+      <h4 class="further-options_container__heading">{{ 'MAIN.FOOTER.OTHERS.TITLE' | translate }}</h4>
       <ul class="further-options_container__list">
-        <li><a href="#">FAQ</a></li>
-        <li><a href="#">Terms & Conditions</a></li>
-        <li><a href="#">GDPR</a></li>
+        <li><a routerLink="/terms">{{'MAIN.FOOTER.OTHERS.FAQ' | translate}}</a></li>
+        <li><a routerLink="/terms">{{'MAIN.FOOTER.OTHERS.TERMS' |translate}}</a></li>
+        <li><a href="#">{{'MAIN.FOOTER.OTHERS.GDPR' | translate}}</a></li>
       </ul>
     </div>
   </div>
