--- a/src/app/components/app-footer/app-footer.component.html
+++ b/src/app/components/app-footer/app-footer.component.html
@@ -38,7 +38,7 @@
       <ul class="further-options_container__list">
         <li><a routerLink="/terms">{{'MAIN.FOOTER.OTHERS.FAQ' | translate}}</a></li>
         <li><a routerLink="/terms">{{'MAIN.FOOTER.OTHERS.TERMS' |translate}}</a></li>
-        <li><a href="#">{{'MAIN.FOOTER.OTHERS.GDPR' | translate}}</a></li>
+        <li><a routerLink="/gdpr">{{'MAIN.FOOTER.OTHERS.GDPR' | translate}}</a></li>
       </ul>
     </div>
   </div>
