adjust terms of use text and routing options to scroll automaticaly to the top of the pagea

--- a/src/app/components/app-main-section/components/terms-of-use/terms-of-use.component.scss
+++ b/src/app/components/app-main-section/components/terms-of-use/terms-of-use.component.scss
@@ -17,6 +17,18 @@
     margin-bottom: 50px;
   }
 
+  a {
+    color: grey;
+  }
+
+  a:hover{
+    color: $mainRoseAsh;
+  }
+
+  a:active{
+    color: grey;
+  }
+
   @include atMedium{
     background: rgba(255, 255, 255, 0.4);
     border-radius: 10px;
