--- a/src/app/components/app-footer/app-footer.component.html
+++ b/src/app/components/app-footer/app-footer.component.html
@@ -36,7 +36,7 @@
     <div class="further-options_container">
       <h4 class="further-options_container__heading">{{ 'MAIN.FOOTER.OTHERS.TITLE' | translate }}</h4>
       <ul class="further-options_container__list">
-        <li><a routerLink="/terms">{{'MAIN.FOOTER.OTHERS.FAQ' | translate}}</a></li>
+        <li><a [routerLink]="['/']" fragment="faq">{{'MAIN.FOOTER.OTHERS.FAQ' | translate}}</a></li>
         <li><a routerLink="/terms">{{'MAIN.FOOTER.OTHERS.TERMS' |translate}}</a></li>
         <li><a routerLink="/gdpr">{{'MAIN.FOOTER.OTHERS.GDPR' | translate}}</a></li>
       </ul>
