--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,12 +2,13 @@
 @import 'assets/modules/btn';
 @import './assets/modules/_colors.scss';
 
-  html, body {
+html, body {
   font-family: 'pt sans', sans-serif;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   background-color: $mainBgColor;
+  scroll-behavior: smooth;
 }
 
 img {
