--- a/src/app/components/app-main-section/components/main-page-section/app-main-page-section.component.scss
+++ b/src/app/components/app-main-section/components/main-page-section/app-main-page-section.component.scss
@@ -18,17 +18,35 @@
 
 .intro-hero {
   border-bottom: 10px solid $mainRoseAsh;
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
 
   img {
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
-    height: 800px;
+    height: 100%;
     object-fit: cover;
-    opacity: 40%;
-    display: none;
+    opacity: 0;
+    transition: opacity 1s ease-in-out;
+    z-index: 0;
   }
 
   img.active {
-    display: block;
+    opacity: 1;
+  }
+
+  .image-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.4);
+    z-index: 1;
   }
 
   &__text-content {
@@ -41,6 +59,7 @@
     width: 70%;
     transform: translateY(-50%);
     text-align: center;
+    z-index: 10;
 
     @include atMedium {
       left: 14.35%;
