adjust gdpr link in terms of use to look more aesthetic

--- a/src/app/components/app-main-section/components/terms-of-use/terms-of-use.component.html
+++ b/src/app/components/app-main-section/components/terms-of-use/terms-of-use.component.html
@@ -33,7 +33,7 @@
         <br>
         {{ 'MAIN.OTHER.TERMS_CONDITIONS.TERMS.TERMS_TITLE6' | translate }}<br>
         {{ 'MAIN.OTHER.TERMS_CONDITIONS.TERMS.6_1' | translate }}
-        <a routerLink="/gdpr">{{ 'MAIN.OTHER.TERMS_CONDITIONS.TERMS.6_1_1' | translate }}</a><br>
+        <a routerLink="/gdpr">{{ 'MAIN.OTHER.TERMS_CONDITIONS.TERMS.6_1_1' | translate }}</a>.<br>
         {{ 'MAIN.OTHER.TERMS_CONDITIONS.TERMS.6_2' | translate }}<br>
         <br>
         <br>
