adjust form styling and add translation for form input fields

--- a/src/app/components/app-main-section/components/reservations-page-section/reservations-page-section.component.scss
+++ b/src/app/components/app-main-section/components/reservations-page-section/reservations-page-section.component.scss
@@ -15,11 +15,16 @@ h2 {
 .form-container {
   max-width: 700px;
   margin: 0 auto 100px;
+  border-radius: 10px;
   padding: 20px;
   display: flex;
   flex-direction: column;
   gap: 1rem;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+
+  @include atMedium {
+    box-shadow: 20px 20px 12px rgba(0, 0, 0, 0.2), 0 1px 3px rgba(0, 0, 0, 0.1);
+  }
 }
 
 .name-fields {
@@ -78,8 +83,9 @@ input {
 }
 
 .error {
+  margin-top: 5px;
   color: red;
-  font-size: 12px;
+  font-size: 14px;
 }
 
 button {
