--- a/src/app/components/app-main-section/components/reservations-page-section/reservations-page-section.component.html
+++ b/src/app/components/app-main-section/components/reservations-page-section/reservations-page-section.component.html
@@ -8,44 +8,48 @@
   </h2>
   <div class="name-fields">
     <div class="input-group">
-      <label for="firstName">First Name</label>
-      <input id="firstName" type="text" formControlName="firstName" placeholder="First Name"/>
+      <label for="firstName">{{ 'MAIN.RESERVATIONS.FORM.FIRST_NAME' | translate }}</label>
+      <input id="firstName" type="text" formControlName="firstName"
+             placeholder="{{ 'MAIN.RESERVATIONS.FORM.FIRST_NAME' | translate }}"/>
       <small *ngIf="userForm.get('firstName')?.invalid && userForm.get('firstName')?.touched" class="error">
-        First name must be at least 3 characters.
+        {{ 'MAIN.RESERVATIONS.FORM.ERRORS.FIRST_NAME' | translate }}
       </small>
     </div>
 
     <div class="input-group">
-      <label for="secondName">Second Name</label>
-      <input id="secondName" type="text" formControlName="secondName" placeholder="Second Name"/>
+      <label for="secondName">{{ 'MAIN.RESERVATIONS.FORM.LAST_NAME' | translate }}</label>
+      <input id="secondName" type="text" formControlName="secondName"
+             placeholder="{{ 'MAIN.RESERVATIONS.FORM.LAST_NAME' | translate }}"/>
       <small *ngIf="userForm.get('secondName')?.invalid && userForm.get('secondName')?.touched" class="error">
-        Second name must be at least 3 characters.
+        {{ 'MAIN.RESERVATIONS.FORM.ERRORS.LAST_NAME' | translate }}
       </small>
     </div>
   </div>
 
   <div class="input-group">
-    <label for="phoneNumber">Phone Number</label>
-    <input id="phoneNumber" type="tel" formControlName="phoneNumber" placeholder="Phone Number"/>
+    <label for="phoneNumber">{{ 'MAIN.RESERVATIONS.FORM.PHONE_NUMBER' | translate }}</label>
+    <input id="phoneNumber" type="tel" formControlName="phoneNumber"
+           placeholder="{{ 'MAIN.RESERVATIONS.FORM.PHONE_NUMBER' | translate }}"/>
     <small *ngIf="userForm.get('phoneNumber')?.invalid && userForm.get('phoneNumber')?.touched" class="error">
-      Enter a valid phone number.
+      {{ 'MAIN.RESERVATIONS.FORM.ERRORS.PHONE_NUMBER' | translate }}
     </small>
   </div>
 
   <!-- Email Field -->
   <div class="input-group">
-    <label for="email">E-mail</label>
-    <input id="email" type="email" formControlName="email" placeholder="E-mail"/>
+    <label for="email">{{ 'MAIN.RESERVATIONS.FORM.E_MAIL' | translate }}</label>
+    <input id="email" type="email" formControlName="email"
+           placeholder="{{ 'MAIN.RESERVATIONS.FORM.E_MAIL' | translate }}"/>
     <small *ngIf="userForm.get('email')?.invalid && userForm.get('email')?.touched" class="error">
-      Enter a valid email.
+      {{ 'MAIN.RESERVATIONS.FORM.ERRORS.E_MAIL' | translate }}
     </small>
   </div>
 
   <div class="input-group">
-    <label for="date">Select Date</label>
+    <label for="date">{{ 'MAIN.RESERVATIONS.FORM.DATE' | translate }}</label>
     <input id="date" type="date" formControlName="date"/>
     <small *ngIf="userForm.get('date')?.invalid && userForm.get('date')?.touched" class="error">
-      Date is required.
+      {{ 'MAIN.RESERVATIONS.FORM.ERRORS.DATE' | translate }}
     </small>
   </div>
 
@@ -53,12 +57,12 @@
     <label>
       <input type="radio" formControlName="option" value="option1"
              [disabled]="userForm.get('option')?.value === 'option2'"/>
-      Group Training
+      {{ 'MAIN.RESERVATIONS.FORM.GROUP_TRAINING' | translate }}
     </label>
     <label>
       <input type="radio" formControlName="option" value="option2"
              [disabled]="userForm.get('option')?.value === 'option1'"/>
-      Individual Training
+      {{ 'MAIN.RESERVATIONS.FORM.INDIVIDUAL_TRAINING' | translate }}
     </label>
   </div>
 
