--- a/src/app/components/app-main-section/components/gallery-page-section/gallery-page-section.component.scss
+++ b/src/app/components/app-main-section/components/gallery-page-section/gallery-page-section.component.scss
@@ -13,76 +13,89 @@
   margin-bottom: 2.5rem;
 }
 
-.carousel {
-  position: relative;
-  max-width: 1000px;
-  margin: auto;
-  overflow: hidden;
-  border-radius: 20px;
-  //box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+.gallery_container {
+  display: flex;
+  flex-direction: column;
 }
 
-.carousel-images {
-  display: flex;
-  transition: transform 0.5s ease-in-out;
-  height: 760px;
+.gallery {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  padding: 10px;
 
-  img {
-    object-fit: contain;
-    border-radius: 20px;
+  @include atMedium {
+    grid-template-columns: repeat(5, 1fr);
+    gap: 10px;
+    padding: 10px 100px;
   }
 }
 
-img {
+.thumbnail {
   width: 100%;
-  display: none;
+  height: auto;
+  cursor: pointer;
+  transition: transform 0.3s ease;
+  border-radius: 8px;
+  margin-bottom: 10px;
+
+  @include atMedium {
+    margin: 0;
+  }
 }
 
-img.active {
-  display: block;
+.thumbnail:hover {
+  transform: scale(1.1);
+  z-index: 2;
 }
 
-img.active:hover {
-  display: block;
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.9);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1000;
 }
 
-button {
+.modal-content {
+  max-width: 80%;
+  max-height: 80%;
+  border-radius: 8px;
+}
+
+.close {
+  position: absolute;
+  top: 30px;
+  right: 50px;
+  font-size: 40px;
+  color: white;
+  cursor: pointer;
+}
+
+.prev,
+.next {
+  cursor: pointer;
   position: absolute;
   top: 50%;
-  transform: translateY(-50%);
-  background-color: transparent;
-  color: #FFFFFF;
-  border: none;
-  padding: 10px;
-  cursor: pointer;
+  padding: 16px;
   font-size: 40px;
-  border-radius: 50%;
+  color: white;
+  user-select: none;
+  transform: translateY(-50%);
 }
 
 .prev {
-  left: 10px;
+  left: 20px;
 }
 
 .next {
-  right: 10px;
+  right: 20px;
 }
 
-.dots {
-  text-align: center;
-  margin-top: 10px;
-}
-
-.dot {
-  height: 10px;
-  width: 10px;
-  margin: 0 5px 5px;
-  background-color: gray;
-  border-radius: 50%;
-  display: inline-block;
-  cursor: pointer;
-  transition: background-color 0.3s;
-}
-
-.dot.active {
-  background-color: white;
+.btn_gallery {
+  margin: 100px auto;
 }
