--- a/src/app/components/app-main-section/components/about-us-page-section/about-us-page-section.component.scss
+++ b/src/app/components/app-main-section/components/about-us-page-section/about-us-page-section.component.scss
@@ -30,6 +30,7 @@
   flex-wrap: wrap;
   flex-direction: column;
   gap: 50px;
+  text-align: left;
 }
 
 .about-us_card {
@@ -62,7 +63,6 @@
 
   @include atMedium {
     width: 60%;
-    //height: 500px;
     text-align: left;
     margin-left: auto;
     margin-right: auto;
