--- a/src/app/components/app-main-section/components/contacts-page-section/contacts-page-section.component.html
+++ b/src/app/components/app-main-section/components/contacts-page-section/contacts-page-section.component.html
@@ -1,12 +1,73 @@
-<div class="faq-container">
-  <h2>Frequently Asked Questions</h2>
-  <div *ngFor="let faq of faqs; let i = index" class="faq" (click)="toggleFaq(i)">
-    <div class="question">
-      {{ faq.question }}
-      <span class="arrow" [class.rotate]="faq.isOpen"> </span>
+<h4 class="contacts_container__heading section-title">{{'MAIN.CONTACTS.TITLE' | translate}}</h4>
+<div class="contacts_container">
+  <ul class="contacts_container__list">
+    <li><a type="phone" href="tel:+1234567890">
+      <ng-icon class="ng_icons" name="bootstrapTelephoneFill"></ng-icon>
+      +359 88888888</a></li>
+    <li><a type="mail" href="mailto:lyubomir_vasilev1992@abv.bg">
+      <ng-icon class="ng_icons" name="bootstrapEnvelopeOpenFill"></ng-icon>
+      {{ 'ven@abv.bg' }}</a></li>
+    <li><a
+      href="https://g.co/kgs/Rp5DPvw">
+      <ng-icon class="ng_icons" name="bootstrapPinMapFill"></ng-icon>
+      {{ 'MAIN.FOOTER.CONTACTS.CONTACTS_LIST.LOCATION' | translate }}</a></li>
+  </ul>
+  <app-google-map></app-google-map>
+  <form [formGroup]="userForm" (ngSubmit)="onSubmit()" class="form-container">
+    <h2 class="form_header">
+      {{'MAIN.CONTACTS.CONTACTS_FORM.TITLE' | translate}}
+    </h2>
+    <div class="name-fields">
+      <div class="input-group">
+        <label for="firstName">{{ 'MAIN.RESERVATIONS.FORM.FIRST_NAME' | translate }}</label>
+        <input id="firstName" type="text" formControlName="firstName"
+               placeholder="{{ 'MAIN.RESERVATIONS.FORM.FIRST_NAME' | translate }}"/>
+        <small *ngIf="userForm.get('firstName')?.invalid && userForm.get('firstName')?.touched" class="error">
+          {{ 'MAIN.RESERVATIONS.FORM.ERRORS.FIRST_NAME' | translate }}
+        </small>
+      </div>
+
+      <div class="input-group">
+        <label for="secondName">{{ 'MAIN.RESERVATIONS.FORM.LAST_NAME' | translate }}</label>
+        <input id="secondName" type="text" formControlName="secondName"
+               placeholder="{{ 'MAIN.RESERVATIONS.FORM.LAST_NAME' | translate }}"/>
+        <small *ngIf="userForm.get('secondName')?.invalid && userForm.get('secondName')?.touched" class="error">
+          {{ 'MAIN.RESERVATIONS.FORM.ERRORS.LAST_NAME' | translate }}
+        </small>
+      </div>
     </div>
-    <div class="answer-container" [class.open]="faq.isOpen">
-      <div class="answer">{{ faq.answer }}</div>
+
+    <div class="input-group">
+      <label for="phoneNumber">{{ 'MAIN.RESERVATIONS.FORM.PHONE_NUMBER' | translate }}</label>
+      <input id="phoneNumber" type="tel" formControlName="phoneNumber"
+             placeholder="{{ 'MAIN.RESERVATIONS.FORM.PHONE_NUMBER' | translate }}"/>
+      <small *ngIf="userForm.get('phoneNumber')?.invalid && userForm.get('phoneNumber')?.touched" class="error">
+        {{ 'MAIN.RESERVATIONS.FORM.ERRORS.PHONE_NUMBER' | translate }}
+      </small>
     </div>
-  </div>
+
+    <!-- Email Field -->
+    <div class="input-group">
+      <label for="email">{{ 'MAIN.RESERVATIONS.FORM.E_MAIL' | translate }}</label>
+      <input id="email" type="email" formControlName="email"
+             placeholder="{{ 'MAIN.RESERVATIONS.FORM.E_MAIL' | translate }}"/>
+      <small *ngIf="userForm.get('email')?.invalid && userForm.get('email')?.touched" class="error">
+        {{ 'MAIN.RESERVATIONS.FORM.ERRORS.E_MAIL' | translate }}
+      </small>
+    </div>
+
+    <label for="feedback">{{ 'MAIN.SHARED.TEXTAREA.TITLE' | translate }}</label>
+    <textarea
+      id="feedback"
+      formControlName="feedback"
+      maxlength="1000"
+      rows="5"
+      placeholder="{{'MAIN.SHARED.TEXTAREA.PLACEHOLDER' | translate}}"
+    ></textarea>
+
+    <button type="submit" [disabled]="!userForm.valid">
+      {{ 'MAIN.CONTACTS.CONTACTS_FORM.SUBMIT' | translate }}
+    </button>
+  </form>
+
 </div>
