add phone number and e-mail in footer, prices adjusted too

--- a/src/app/components/app-footer/app-footer.component.html
+++ b/src/app/components/app-footer/app-footer.component.html
@@ -23,10 +23,10 @@
       <ul class="contacts_container__list">
         <li><a type="phone" href="tel:+1234567890">
           <ng-icon class="ng_icons" name="bootstrapTelephoneFill"></ng-icon>
-          +359 88888888</a></li>
-        <li><a type="mail" href="mailto:lyubomir_vasilev1992@abv.bg">
+          +359 897870010</a></li>
+        <li><a type="mail" href="mailto:reformflowstudio@gmail.com">
           <ng-icon class="ng_icons" name="bootstrapEnvelopeOpenFill"></ng-icon>
-          {{ 'ven@abv.bg' }}</a></li>
+          {{ 'reformflowstudio@gmail.com' }}</a></li>
         <li><a
           href="https://g.co/kgs/Rp5DPvw">
           <ng-icon class="ng_icons" name="bootstrapPinMapFill"></ng-icon>
