--- a/src/app/components/app-footer/app-footer.component.html
+++ b/src/app/components/app-footer/app-footer.component.html
@@ -21,7 +21,7 @@
     <div class="contacts_container">
       <h4 class="contacts_container__heading">{{ 'MAIN.FOOTER.CONTACTS.HEADER' | translate }}</h4>
       <ul class="contacts_container__list">
-        <li><a type="phone" href="tel:+1234567890">
+        <li><a type="phone" href="tel:+359 897870010">
           <ng-icon class="ng_icons" name="bootstrapTelephoneFill"></ng-icon>
           +359 897870010</a></li>
         <li><a type="mail" href="mailto:reformflowstudio@gmail.com">
