--- a/src/app/components/app-main-section/components/news-page-section/news-detail/news-detail.component.html
+++ b/src/app/components/app-main-section/components/news-page-section/news-detail/news-detail.component.html
@@ -2,6 +2,6 @@
   <h1 class="news-details__heading section-title">{{ newsData.title }}</h1>
   <p class="news-details__date">Date: {{newsData.date}}</p>
   <img class="news-details__image" src="{{newsData.image}}" alt="news-image">
-  <p class="news-details__content">{{newsData.content}}</p>
+  <p class="news-details__description">{{newsData.description}}</p>
 </div>
 
